[package]
name = "filecoin-webapi"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_webapi"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-webapi"
path = "src/main.rs"

[dependencies]
actix-rt = "*"
actix-web = "^3"
actix-multipart = "^0.3"
futures = "*"
futures-core = "*"
futures-util = "*"
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
mime = "*"
lazy_static = "*"
libc = "*"
bytes = "*"
clap = "*"

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "5.0.0"
