[package]
name = "filecoin-webapi"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_webapi"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-webapi"
path = "src/main.rs"

[dependencies]
actix-rt = "*"
actix-web = { version = "^3", features = ["openssl"] }
actix-multipart = "^0.3"
actix-service = "*"
futures = "*"
futures-core = "*"
futures-util = "*"
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
mime = "*"
lazy_static = "*"
libc = "*"
bytes = "*"
clap = "*"
openssl = "*"

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "5.1.1"
